# TreadMarks

./: .gitignore  BUILD.txt  CMakeLists.txt
Installers/: MakeAndSign.bat  setup.nsi
Resources/: Changes.txt  Server Commands.txt  config.cfg  dedicated.cfg  fast.cfg  godlypc.cfg  normal.cfg  pretty.cfg
Resources/Local/: Language.TXT  Paths.TXT
Resources/Local/English/: Controls.txt  Help.TXT  Lines.TXT  Names.TXT  Weapons.TXT
Resources/Local/French/: Help.TXT  Lines.TXT  Names.TXT  Weapons.TXT
Resources/Local/German/: Help.TXT  Lines.TXT  Names.TXT  Sounds.TXT  Tutorial.TXT  Weapons.TXT
Resources/Maps/: ClayHills.ved  ClayHills2.ved  DM1.ved  DM10.ved  DM11.ved  DM12.ved  DM2.ved  DM3.ved  DM4.ved  DM5.ved  DM6.ved  DM7.ved  DM8.ved  DM9.ved  DMCaldera.ved  DMCone.ved  DMIce.ved  DMMixedEggs.ved  DMSpikey.ved  DMSteps.ved  Jim10.ved  Jim11.ved  Jim1L.ved  Jim2L.ved  Jim3L.ved  Jim4L.ved  Jim5.ved  Jim6.ved  Jim6T.ved  Jim7.ved  Jim7A.ved  Jim7F.ved  Jim8.ved  Jim8A.ved  Jim9.ved  JimArmaged.ved  JimCTF1.ved  JimCTF2.ved  JimCTF3.ved  JimCTF4.ved  (+21 more)
Resources/art/Sprites/: FireBall.img  SmokeC.img
Resources/art/Trees/: Shrub1.img  Tree2.img  Tree2B.img  Tree3.img  Tree5.img  Tree5B.img
Resources/entities/: Changes.txt  readme.txt  tanknames.txt
Resources/entities/Bauble/: Bauble1.ent
Resources/entities/Course/: AirstrikeCheckPoint.ent  AmmoBoxCheckPoint.ent  BoxOfDeathCheckPoint.ent  CruiseCheckPoint.ent  DirtballCheckPoint.ent  DrillBitCheckPoint.ent  DrillCheckPoint.ent  EmptyCheckPoint.ent  FlamerCheckPoint.ent  GAUCheckPoint.ent  GLauncherCheckPoint.ent  HealthCheckPoint.ent  HeavyMGCheckPoint.ent  LaserCheckPoint.ent  MRL2CheckPoint.ent  MassDriverCheckPoint.ent  MatterBombCheckPoint.ent  MineLayerCheckPoint.ent  NukeCheckPoint.ent  PlasmaCheckPoint.ent  StdCheckPoint.ent  SuperAmmoCheckPoint.ent  Swarmer1Point.ent  TankCheckPoint.ent  TargetCheckPoint.ent  Team0StdCheckPoint.ent  Team1FlagPoint.ent  Team1StdCheckPoint.ent  Team2FlagPoint.ent  Team2StdCheckPoint.ent  Team3FlagPoint.ent  Team3StdCheckPoint.ent  Team4FlagPoint.ent  Team4StdCheckPoint.ent  Team5FlagPoint.ent  Team5StdCheckPoint.ent  Team6FlagPoint.ent  Team6StdCheckPoint.ent  WonkeyGunPoint.ent  launcher1CheckPoint.ent  (+1 more)
Resources/entities/Crud/: DrillHit.ent  DrillSparks.ent  GreenSparks.ent  GreenSparksDirt.ent  GreenSparksThin.ent  OrangeSparks.ent  OrangeSparks2.ent  OrangeSparks3.ent  dark1.ent  dust1.ent  readme.txt  thin1.ent
Resources/entities/Explo/: Bullet.ent  FireAlpha.ent  FireBig.ent  FireBig2.ent  FireBigTall.ent  FireGAU.ent  FireNapalm.ent  FireTall.ent  GreenSparks.ent  LaserHit.ent  LaserSparks.ent  MassHit.ent  MassTailings.ent  Matter.ent  Matter2.ent  Matter3.ent  NapalmCinders.ent  Nuke.ent  Nuke2.ent  Nuke3.ent  PlasmaHit.ent  PlasmaTall.ent  SmokeBig.ent  SmokeTiny.ent  TankDeath1.ent  TankSpawn.ent  TinyGreenSparks.ent  TreeDeath.ent  WaspHit.ent  WonkHit.ent  YellowSparks.ent  readme.txt
Resources/entities/ExploSphere/: BlipIn.ent  BlipOut.ent  FireEnv1.ent  FireEnv2.ent  FireEnv2R.ent  FireEnvSmall.ent  FireEnvSmall2.ent  LaserBeam1.ent  Matter.ent  Matter2.ent  Matter3.ent  Nuke1.ent  Nuke2.ent  Nuke3.ent  PlasmaEnv1.ent  Shockwave1.ent  Shockwave2.ent  ShockwaveHit.ent  TealEnv1.ent  Teardrop.ent  Teardrop2.ent
Resources/entities/Flags/: team1flag.ent  team2flag.ent  team3flag.ent  team4flag.ent  team5flag.ent  team6flag.ent
Resources/entities/GUI/: Button1.ent  ButtonDown.ent  ButtonDownSquished.ent  ButtonKnob.ent  ButtonUp.ent  ButtonUpSquished.ent  Chatbox.ent  Doppelganger1.ent  Edit1.ent  IntroBack1.ent  IntroBack2.ent  IntroBack3.ent  IntroBack4.ent  IntroBack5.ent  IntroBack6.ent  IntroBack7.ent  LadderBackground.ent  Listbox1.ent  Listbox2.ent  Listbox3.ent  Listbox4.ent  LogoBackground.ent  Mouse1.ent  OptionsBackground.ent  OutroBack1.ent  OutroBack2.ent  OutroBack3.ent  PFireBackground.ent  ResultsBackground.ent  TMLogo.ent  Title1.ent  Trophy.ent  TrophyBackground.ent  ibInsignia.ent  ibMap.ent  readme.txt
Resources/entities/Icons/: Chamfered2DBox.ent  (+5 more)
Resources/objects/: 8Ball.lwo  BannerH.luv  BannerH.lwo  BannerL.lwo  BannerM.lwo  BannerTeamH.lwo  BannerTeamL.luv  BannerTeamL.lwo  BannerTeamM.luv  BannerTeamM.lwo  Bauble.lwo  Bauble2.lwo  Bauble2T.lwo  BaubleSphereH.lwo  BaubleT.lwo  Book.luv  Book.lwo  FlagH.luv  FlagH.lwo  FlagL.luv  FlagL.lwo  FlagM.luv  FlagM.lwo  Keyboard.luv  Keyboard.lwo  Pointer1.lwo  Pointer2.lwo  Pole.lwo  SphereHigh.lwo  SphereLow.lwo  SphereSquishedHigh.lwo  SphereSquishedLow.lwo  Tank1.luv  Tank1.lwo  Tank1Turret.lwo  Tank2.lwo  Tank2Turret.lwo  Tank3.lwo  Tank4.lwo  Tank4B.lwo  (+60 more)
autorun/: Autorun.cpp  Autorun.dsp  Autorun.rc  CStr.cpp  CStr.h  Reg.cpp  Reg.h  resource.h
cmake/Modules/: FindGLEW.cmake
src/game/: Basis.cpp  Basis.h  BitPacking.h  CJoyInput.cpp  CJoyInput.h  CJoyInputHeadless.cpp  CMakeLists.txt  CamRbd.cpp  CamRbd.h  CfgParse.cpp  CfgParse.h  Compression.cpp  Compression.h  Directories.h  EntityBase.cpp  EntityBase.h  EntityFlag.cpp  EntityFlag.h  EntityGUI.cpp  EntityGUI.h  EntityPFire.cpp  EntityPFire.h  EntityRacetank.cpp  EntityTank.cpp  EntityTank.h  FileCRCList.cpp  FileCRCList.h  FileManager.cpp  FileManager.h  Find.cpp  Find.h  GenericBuffer.cpp  GenericBuffer.h  GenericBufferHeadless.cpp  Heartbeat.cpp  HelpText.cpp  HelpText.h  IFF.cpp  IFF.h  Image.cpp  (+64 more)
src/game/GL/: GLPolyRender.cpp  GLPolyRender.h  GLTerrain.cpp  GLTerrain.h  GLTerrainRender.cpp  GLTerrainRender.h  GLTerrainRender2.cpp  GLTerrainRender2.h  GLTerrainRender3.cpp  GLTerrainRender3.h  TerrainStub.cpp
src/game/Posix/: Directories.cpp
src/game/Qt/: Dedicated.cpp  Dedicated.h
src/game/win32/: Directories.cpp  TreadMarks.gdf.xml  Treadmarks.aps  Treadmarks.rc  Web.cpp
src/installer/: CMakeLists.txt
src/launcher/: CMakeLists.txt  Launcher.cpp  Launcher.rc  Reg.cpp  Reg.h  resource.h
src/tmmaster/: BanList.cpp  BanList.h  BitPacking.cpp  BitPacking.h  CMakeLists.txt  CStr.cpp  CStr.h  Crypt.cpp  Crypt.h  Heartbeat.cpp  Heartbeat.h  Networking.cpp  Networking.h  TMMaster.cpp  TMMaster.h  Timer.cpp  Trees.h
(+1644 files in other folders)
