cmake_minimum_required(VERSION 3.6.1)

IF(PATH_UCRT)
  INSTALL(DIRECTORY "${PATH_UCRT}/" DESTINATION "/" CONFIGURATIONS Release)
ENDIF()

SET(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION "/")
INCLUDE(InstallRequiredSystemLibraries)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Battle tank racing!")
SET(CPACK_PACKAGE_NAME "Tread Marks")
SET(CPACK_PACKAGE_VENDOR "Longbow Games")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/Resources/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "7")
SET(CPACK_PACKAGE_VERSION_PATCH "0")

IF(WIN32)
  SET(SLASH "\\\\")
  SET(CPACK_PACKAGE_EXECUTABLES "TreadMarks" "Tread Marks")

  SET(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}\\\\header.bmp")
  SET(CPACK_NSIS_MUI_WELCOMEFINISHPAGE_BITMAP "${CMAKE_CURRENT_SOURCE_DIR}\\\\TM_Install.bmp")
  SET(CPACK_NSIS_MUI_UNWELCOMEFINISHPAGE_BITMAP "${CMAKE_CURRENT_SOURCE_DIR}\\\\TM_Install.bmp")
  SET(CPACK_NSIS_DISPLAY_NAME "Tread Marks")
  SET(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/src/TreadMarks.ico")
  SET(CPACK_NSIS_MUI_UNIICON "${CMAKE_CURRENT_SOURCE_DIR}/uninstall.ico")
  SET(CPACK_NSIS_INSTALLED_ICON_NAME "TreadMarks.exe")
  SET(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\www.LongbowGames.com")
  SET(CPACK_NSIS_EXECUTABLES_DIRECTORY ".")
  SET(CPACK_NSIS_MUI_FINISHPAGE_RUN "TreadMarks.exe")
  SET(CPACK_NSIS_MENU_LINKS "http://www.LongbowGames.com" "Longbow Games Web Site")
ELSE()
  SET(SLASH "/")
  SET(CPACK_PACKAGE_EXECUTABLES "TreadMarks" "TM")
ENDIF()

SET(CPACK_PACKAGE_FILE_NAME "Tread Marks Installer")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "LDA Games${SLASH}Tread Marks")
SET(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "Tread Marks")
set(CPACK_MONOLITHIC_INSTALL on)

INCLUDE(CPack)

IF(WIN32)
  ADD_CUSTOM_TARGET(
    PACKAGE_AND_SIGN
    COMMAND "${CMAKE_COMMAND}" --build ${CMAKE_BINARY_DIR} --config $<CONFIG> --target package
    COMMAND signtool.exe "sign /f \"${CERT}\" /p \"${CERT_PASS}\" /t http://timestamp.digicert.com /d \"Tread Marks\" \"${CMAKE_BINARY_DIR}/Tread Marks Installer.exe\""
    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
    )
ENDIF()
